--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1051,9 +1051,9 @@ textarea[readonly] {
   margin-left: -20px;
   float: left;
 }
-.form-stacked {
+/*.form-stacked {
   padding-left: 20px;
-}
+}*/
 .form-stacked fieldset {
   padding-top: 9px;
 }
