--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,108 +1,32 @@
-<% title "Entry" %>
+<% title "@entry" %>
 
-<p>
-  <strong>User:</strong>
-  <%= @entry.user_id %>
-</p>
-<p>
-  <strong>Company:</strong>
-  <%= @entry.company_id %>
-</p>
-<p>
-  <strong>Ref No:</strong>
-  <%= @entry.ref_no %>
-</p>
-<p>
-  <strong>Year Model:</strong>
-  <%= @entry.year_model %>
-</p>
-<p>
-  <strong>Car Brand:</strong>
-  <%= @entry.car_brand_id %>
-</p>
-<p>
-  <strong>Car Model:</strong>
-  <%= @entry.car_model_id %>
-</p>
-<p>
-  <strong>Car Variant:</strong>
-  <%= @entry.car_variant_id %>
-</p>
-<p>
-  <strong>Plate No:</strong>
-  <%= @entry.plate_no %>
-</p>
-<p>
-  <strong>Serial No:</strong>
-  <%= @entry.serial_no %>
-</p>
-<p>
-  <strong>Motor No:</strong>
-  <%= @entry.motor_no %>
-</p>
-<p>
-  <strong>Date Of Loss:</strong>
-  <%= @entry.date_of_loss %>
-</p>
-<p>
-  <strong>City:</strong>
-  <%= @entry.city_id %>
-</p>
-<p>
-  <strong>Term:</strong>
-  <%= @entry.term_id %>
-</p>
-<p>
-  <strong>Line Items Count:</strong>
-  <%= @entry.line_items_count %>
-</p>
-<p>
-  <strong>Photos Count:</strong>
-  <%= @entry.photos_count %>
-</p>
-<p>
-  <strong>Status:</strong>
-  <%= @entry.status %>
-</p>
-<p>
-  <strong>Online:</strong>
-  <%= @entry.online %>
-</p>
-<p>
-  <strong>Bid Until:</strong>
-  <%= @entry.bid_until %>
-</p>
-<p>
-  <strong>Bids Count:</strong>
-  <%= @entry.bids_count %>
-</p>
-<p>
-  <strong>Decided:</strong>
-  <%= @entry.decided %>
-</p>
-<p>
-  <strong>Relisted:</strong>
-  <%= @entry.relisted %>
-</p>
-<p>
-  <strong>Relist Count:</strong>
-  <%= @entry.relist_count %>
-</p>
-<p>
-  <strong>Expired:</strong>
-  <%= @entry.expired %>
-</p>
-<p>
-  <strong>Chargeable Expiry:</strong>
-  <%= @entry.chargeable_expiry %>
-</p>
-<p>
-  <strong>Oders Count:</strong>
-  <%= @entry.oders_count %>
-</p>
+<%= content_tag :li, (content_tag :span, 'Plate No: ') + (content_tag :strong, @entry.plate_no), :id => "plate-no" %>
+<%= content_tag :li, (content_tag :span, 'Serial No or VIN: ') + @entry.serial_no, :id => "serial-no" %>
+<%= content_tag :li, (content_tag :span, 'Motor No: ') + @entry.motor_no, :id => "motor-no" %>
+<%= content_tag :li, (content_tag :span, 'Date Of Loss: ') + @entry.date_of_loss.to_s(:long), :id => "date-of-loss" if @entry.date_of_loss %>
+<%= content_tag :li, (content_tag :span, 'Deliver To: ') + @entry.city.name, :id => "deliver-to" if @entry.city %>
+<%= content_tag :li, (content_tag :span, 'Credit Term: ') + (content_tag :strong, @entry.term.term_name), :id => "term" if @entry.term %>
+<%= content_tag :li, "#{content_tag :span, 'Created by'} #{@entry.user.username} ".html_safe if @entry.user  %>
 
-<p>
-  <%= link_to "Edit", edit_entry_path(@entry) %> |
-  <%= link_to "Destroy", @entry, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", entries_path %>
-</p>
+<div class="photo-set">
+	<% unless @entry.photos.blank? %>
+	<ul>
+		<li class="instruction photo">Click on photos to enlarge.</li>
+		<% @entry.photos.each do |photo| %>
+			<% if photo.processing? %>
+				<li><%= image_tag '/images/processing_photo.png', :class => "photo", :alt => "Photo of #{@entry.plate_no}" %></li>
+			<% else %>
+				<li><%= link_to (image_tag photo.photo.url(:tiny), :class => "thumbnail", :alt => "Photo of #{@entry.plate_no}"), photo.photo.url(:large), :rel => "shadowbox[#{@entry.id}]" %></li>
+			<% end %>
+		<% end %>
+	</ul>	
+	<% else %>
+		<%= content_tag :h3, 'No photos submitted yet.' %>
+	<% end %>
+</div>	
+
+<div class="well">
+	<%= link_to 'Edit', edit_entry_path(@entry) %>
+	<%= link_to "New Entry", new_entry_path, class: 'btn large primary' %>
+	<%= link_to 'List', entries_path %>
+</div>
