--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,8 +1,5 @@
 <% title "Edit Entry" %>
 
-<%= render 'form' %>
-
-<p>
-  <%= link_to "Show", @entry %> |
-  <%= link_to "View All", entries_path %>
-</p>
+<%= simple_nested_form_for @entry, form_class: 'form-stacked' do |f| %>
+	<%= render 'form', f: f %>
+<% end %>
