--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,6 @@
 <% title "New Entry" %>
 
-<%= render 'form' %>
+<%= simple_nested_form_for @entry, form_class: 'form-stacked' do |f| %>
+	<%= render 'form', f: f %>
+<% end %>
 
-<p><%= link_to "Back to List", entries_path %></p>
