--- a/app/views/entries/_seller.html.erb
+++ b/app/views/entries/_seller.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag bids_path(:entry_id => @entry), remote: true do %>
-<div id="" class="row">
-	<div id="" class="span12">
+<div class="row">
+	<div class="span12">
 		<%= content_tag :h3, 'Parts Requested' %>
 
 		<%= content_tag :table, class: 'zebra-striped' do %>
