--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,7 +1,7 @@
 <% title "Entries" %>
 
 <% @entries.group_by { |e| e.created_at.beginning_of_day }.each do |date, grouped_entries| %>
-	<%= content_tag :h4, regular_date(date) %>
+	<%= content_tag :h4, regular_date(date, 'day') %>
 	<% grouped_entries.in_groups_of(4, false) do |row_entries| %>
 		<div class="row show-grid">
 		<% for entry in row_entries %>
@@ -16,7 +16,7 @@
 				<%= content_tag :p, entry.ref_no, class: 'small' %>
 				<%= content_tag :p, entry.model_name %>
 				<%= content_tag :p, entry.plate_no, class: 'small' %>
-				<%= content_tag :p, entry.status, class: 'label' %>
+				<%= content_tag :div, entry.status, class: "label #{entry.status_color}" %>
 				<%= content_tag :span, entry.line_items.size, class: 'label black' %>
 				<%= link_to 'Show', entry %>
 				<%= link_to 'Edit', edit_entry_path(entry) %>
