--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -1,11 +1,15 @@
+#main { position: relative; }
+
 .entry {
 	.clearfix { margin-bottom: 18px; }
 	.clearfix .clearfix { margin-bottom: 0; }
 	#veh-year, #veh-brand, #veh-model, #veh-variant, #regions, #cities { clear: none; float: left; margin-right: 5px; }
-	.loading { background: url('assets/loading.gif') no-repeat 0 center; height: 32px; margin-left: 5px; text-indent: -9999px; width: 32px; }
 	img.ui-datepicker-trigger { margin-left: 5px; }
 	legend { padding-bottom: 10px; }
+	p { margin-bottom: 2px; }
+	.thumbnail { margin-top: 10px; }
 }
+#vehicle-info { margin-bottom: 15px; overflow: hidden; }
 
 .fields {
 	overflow: hidden; position: relative;
@@ -24,19 +28,18 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-dt, dd { float: left; }
-dt { clear: both; }
-dl .label { font-size: 16px; }
-
 table p { margin-bottom: 0; }
-.floatright { float: right; }
+.floatright { float: right; margin-left: 5px;}
 .center { text-align: center; }
+.right { text-align: right; }
+.cancelled { text-decoration: line-through; }
 
 .photo-set li { float: left; }
 .label.index { float: left; margin-left: -35px; text-align: center; width: 15px; }
 .label.black { background-color: black; font-size: 0.8em; }
+.label.highlight { background-color: #FFF6BF; color: black; }
 
-.bids-array { position: relative; }
+.bids-array { position: relative; min-height: 1em; margin-bottom: 5px; }
 .bid-box { 
 	float: left; margin-right: 10px; text-align: right; width: 115px;
 	.label { margin-right: 5px; }
@@ -44,7 +47,23 @@ table p { margin-bottom: 0; }
 .cat { min-height: 18px; width: 120px;
 	.bid-amount { float: left; margin-right: 5px; text-align: right; width: 70px; }
 	input { text-align: right; }
+	input[type="radio"] { float: left;	margin-left: -5px; }
 }
 .original { top: 0; left: 0;}
 .replacement { position: absolute; top: 0; left: 128px; }
 .surplus { position: absolute; top: 0; left: 256px; }
+.stats { clear: both; }
+#order-caption { border-bottom: 1px solid #DDD; margin-bottom: 17px; }
+.order { 
+	margin-bottom: 17px;
+	h5, h4 { line-height: 20px; margin: 10px 0; }
+	p { margin-bottom: 0; }
+	.user { margin-top: 15px; font-weight: bold; }
+	dl { margin-top: 25px; }
+	.instr { padding: 5px 0; border-top: 1px dotted black; border-bottom: 1px dotted black; margin-top: 25px; }
+	.due-date { margin-top: 10px; }
+}
+.delivery h5 { font-weight: normal; margin-top: 0; }
+.total { font-size: 1.2em; }
+#address-note { font-style: italic; }
+#supplier-count { font-size: 25px; margin-bottom: 10px; }
