--- a/app/views/bids/_bid.html.erb
+++ b/app/views/bids/_bid.html.erb
@@ -1,2 +1,2 @@
-<%= content_tag :p, "#{content_tag :span, currency(bid.amount), class: 'bid-amount'} #{content_tag :em, bid.user.username, class: 'small'  }".html_safe %>
+<%= bid_amount_helper bid %>
 <%#= content_tag :p, time_in_words(bid.bid_speed) %>
